bare-metal-k8s/storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jhub
